# Slicer-SimilaritySubgroups

./: CMakeLists.txt  README.md
SimilaritySubgroups/: CMakeLists.txt  SimilaritySubgroups.py
SimilaritySubgroups/Resources/UI/: SimilaritySubgroups.ui
